# G10A_Brassage

./: .env  .gitignore  README.md  acceuil.css  acceuil.html  accueil.css  accueil.html  accueil.php  api.php  bdd.php  configurer.css  configurer.html  configurer.php  donnees.css  donnees.html  donnees.php  en_savoir_plus.css  en_savoir_plus.html  essai.css  essai.html  faq.css  faq.html  g10a_users_db.sql  index.html  support_technique.css  support_technique.html  test.html
SerialToDB-1.0.2/: Cargo.toml  README.md  build.rs
SerialToDB-1.0.2/.github/workflows/: release.yml
SerialToDB-1.0.2/config/: default.toml
SerialToDB-1.0.2/src/: main.rs
front_siteweb/login_register/: logout.php
login_register/: config.php  index.php  login_register.php  style.css  verify.php
siteweb/login_register/: index.php  script.js
