[package]
name = "serial_to_db"
version = "1.0.2"
edition = "2024"
authors = ["0xEthamin"]
description = "A Rust application that reads data from a serial port and stores it in a database (PostgreSQL, MySQL, or MariaDB)"
license = "MIT"
repository = "https://github.com/0xEthamin/SerialToDB"
readme = "README.md"
keywords = ["serial", "database", "postgresql", "mysql", "mariadb", "iot"]
categories = ["database", "hardware-support", "embedded"]

[dependencies]
serialport = "4.7"
tokio = { version = "1.45", features = ["full"] }
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
mysql_async = "0.36"

[build-dependencies]
winres = "0.1"